# MiniLang

./: .clang-tidy  CMakeLists.txt  README.md  output.s
.github/workflows/: ci.yml
samples/: arithmetic-expression.mlang  basic.txt  nested-if.mlang  nested-while.mlang
samples/codegenErrors/: not-declared-variable.mlang
samples/lexerErrors/: unexpected-symbol.mlang  wrong-number.mlang
samples/parserErrors/expressionParser/: noClosingParenthesis.mlang  unexpected-token.mlang
samples/parserErrors/statementParser/: noDo.mlang  noDone.mlang  noFi.mlang  noSemicolon.mlang  noThen.mlang
src/: main.cpp
src/AST/: ASTNode.h  expressions-codegenerators.cpp  expressions.h  statements-codegenerators.cpp  statements.h
src/cli-parser/: CLIParser.h
src/code-generation/: codegenerator.cpp  codegenerator.h  register-allocator.h  symboltable.h
src/code-generation/generator-factory/: factory.h
src/code-generation/generators/: codegenerator.h
src/code-generation/generators/c-codegenerator/: Ccodegenerator.h
src/code-generation/generators/risc-codegenerator/: risccodegenerator.h
src/compiler/: compiler.h
src/config/: config.h
src/configs/: configs.h
src/exceptions/: exceptions.h
src/lexer/: lexer.cpp  lexer.h
src/lexer/token/: token.h
src/parser/: expressionParser.cpp  parser.cpp  parser.h  statementParser.cpp
src/token/: token.h
src/util/: processinput.h
tests/: lexerTests.cpp  parserTests.cpp
tests/code-generator/C/: CcodegeneratorExceptionsTests.cpp  CcodegeneratorTests.cpp
tests/code-generator/C/correct-code/: arithmetic-expression.txt  basic.txt  factorial.txt  fibonacci.txt  nested-if.txt  nested-while.txt
tests/code-generator/risc/: riscCodegeneratorExceptionsTests.cpp  riscCodegeneratorTests.cpp
tests/lexer/: lexerExceptionsTests.cpp  lexerTests.cpp
tests/parser/: parserExceptionsTests.cpp  parserTests.cpp
tests/util/: testsUtil.h
(+6 files in other folders)
